--- a/loadc/templates/sqlx.tmpl
+++ b/loadc/templates/sqlx.tmpl
@@ -102,20 +102,28 @@ Core *sqlx.DB
         }
         defer {{ $tx }}.Rollback()
 
-        {{ $splitSql := printf "splitSql%s" $method.Ident }}
-        for _, {{ $splitSql }} := range strings.Split({{ $sql }}.String(), ";") {
-        {{- $execResult := printf "v0%s" $method.Ident -}}
-        if {{ if gt (len $method.Out) 1 }}{{ $execResult }}{{ else }}_{{ end }}, {{ $err }} = {{ $tx }}.Exec({{ $splitSql }}, mrpkg.MergeArgs(
+        {{ $offset := printf "offset%s" $method.Ident }}
+        {{ $offset }} := 0
+        {{ $args := printf "args%s" $method.Ident -}}
+        {{ $args }} := mrpkg.MergeArgs(
         {{ range $index, $ident := $sortIn -}}
             {{- $ident -}},
         {{ end }}
-        )...); {{ $err }} != nil {
+        )
+
+        {{ $splitSql := printf "splitSql%s" $method.Ident }}
+        for _, {{ $splitSql }} := range strings.Split({{ $sql }}.String(), ";") {
+        {{ $count := printf "count%s" $method.Ident -}}
+        {{ $count }} := strings.Count({{ $splitSql }}, "?")
+        {{- $execResult := printf "v0%s" $method.Ident }}
+        if {{ if gt (len $method.Out) 1 }}{{ $execResult }}{{ else }}_{{ end }}, {{ $err }} = {{ $tx }}.Exec({{ $splitSql }}, {{ $args }}[{{ $offset }}:{{ $offset }}+{{ $count }}]...); {{ $err }} != nil {
         return {{ range $index, $type := $method.Out -}}
             {{- if lt $index (sub (len $method.Out) 1) -}}
                 v{{- $index -}}{{- $method.Ident }},
             {{- end -}}
         {{- end -}} fmt.Errorf("error executing %s sql: \n\n%s\n\n%w", strconv.Quote({{ quote $method.Ident }}), {{ $splitSql }}, {{ $err }})
         }
+        {{ $offset }} += {{ $count }}
         }
 
         if {{ $err }} := {{ $tx }}.Commit(); {{ $err }} != nil {
