--- a/loadc/templates/sqlx.tmpl
+++ b/loadc/templates/sqlx.tmpl
@@ -33,6 +33,23 @@ Core: core,
 }
 }
 
+func  New{{ $.Ident }}FromCore(core interface{
+Beginx() (*sqlx.Tx, error)
+BeginTxx(ctx context.Context, opts *sql.TxOptions) (*sqlx.Tx, error)
+PrepareNamed(query string) (*sqlx.NamedStmt, error)
+PrepareNamedContext(ctx context.Context, query string) (*sqlx.NamedStmt, error)
+Exec(query string, args ...interface{}) (sql.Result, error)
+ExecContext(ctx context.Context, query string, args ...interface{}) (sql.Result, error)
+Get(dest interface{}, query string, args ...interface{}) error
+GetContext(ctx context.Context, dest interface{}, query string, args ...interface{}) error
+Select(dest interface{}, query string, args ...interface{}) error
+SelectContext(ctx context.Context, dest interface{}, query string, args ...interface{}) error
+}) {{ $.Ident }} {
+return &{{ $impName }}{
+Core: core,
+}
+}
+
 type {{ $impName }} struct {
 withTx bool
 Core interface{
